# elevenlabs-esp32-m5stack-example

./: .gitignore  .gitmodules  README.md
server/: .env.example  bot.py  pyproject.toml
